--- a/Assignment/AIMLCEP_Q3.ipynb
+++ b/Assignment/AIMLCEP_Q3.ipynb
@@ -3259,11 +3259,11 @@
         "y_train_cnn[0]"
       ],
       "metadata": {
-        "id": "yjHuoTip8h2M",
-        "outputId": "7f323577-1864-4cfa-ed90-69954d6fd452",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yjHuoTip8h2M",
+        "outputId": "7f323577-1864-4cfa-ed90-69954d6fd452"
       },
       "execution_count": 15,
       "outputs": [
@@ -3288,12 +3288,12 @@
         "model_cnn.add(layers.Conv2D(64, kernel_size=3, activation='relu', input_shape=(28,28,1)))\n",
         "model_cnn.add(layers.Conv2D(32, kernel_size=3, activation='relu'))\n",
         "model_cnn.add(layers.Flatten())\n",
-        "model_cnn.add(layers.Dense(10, activation='softmax'))"
+        "model_cnn.add(layers.Dense(5, activation='softmax'))"
       ],
       "metadata": {
         "id": "zx7YIQbR-i6y"
       },
-      "execution_count": 16,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -3305,7 +3305,7 @@
       "metadata": {
         "id": "78I-syPI-wYf"
       },
-      "execution_count": 17,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -3315,36 +3315,119 @@
         "model_cnn.fit(X_train_cnn, y_train_cnn, validation_data=(X_test_cnn, y_test_cnn), epochs=3)"
       ],
       "metadata": {
-        "id": "5ziME6Do_VJ7",
-        "outputId": "e080f96c-2a74-4c96-9e41-d8fc4b8b33ad",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 739
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5ziME6Do_VJ7",
+        "outputId": "c62f0b5a-d79f-4694-9c19-c17d47caace2"
       },
-      "execution_count": 19,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch 1/3\n"
+            "Epoch 1/3\n",
+            "600/600 [==============================] - 50s 83ms/step - loss: 0.1191 - accuracy: 0.9602 - val_loss: 0.0447 - val_accuracy: 0.9871\n",
+            "Epoch 2/3\n",
+            "600/600 [==============================] - 50s 83ms/step - loss: 0.0392 - accuracy: 0.9877 - val_loss: 0.0386 - val_accuracy: 0.9873\n",
+            "Epoch 3/3\n",
+            "600/600 [==============================] - 50s 83ms/step - loss: 0.0264 - accuracy: 0.9920 - val_loss: 0.0422 - val_accuracy: 0.9873\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-ded17b647a1f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#train the model\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mmodel_cnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_cnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_cnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_cnn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test_cnn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/keras/utils/traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint: disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m       \u001b[0mfiltered_tb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_process_traceback_frames\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__traceback__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m       \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m       \u001b[0;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/tensorflow/python/framework/func_graph.py\u001b[0m in \u001b[0;36mautograph_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   1127\u001b[0m           \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m  \u001b[0;31m# pylint:disable=broad-except\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1128\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"ag_error_metadata\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1129\u001b[0;31m               \u001b[0;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mag_error_metadata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_exception\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1130\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1131\u001b[0m               \u001b[0;32mraise\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: in user code:\n\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 878, in train_function  *\n        return step_function(self, iterator)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 867, in step_function  **\n        outputs = model.distribute_strategy.run(run_step, args=(data,))\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 860, in run_step  **\n        outputs = model.train_step(data)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/training.py\", line 810, in train_step\n        y, y_pred, sample_weight, regularization_losses=self.losses)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/engine/compile_utils.py\", line 201, in __call__\n        loss_value = loss_obj(y_t, y_p, sample_weight=sw)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/losses.py\", line 141, in __call__\n        losses = call_fn(y_true, y_pred)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/losses.py\", line 245, in call  **\n        return ag_fn(y_true, y_pred, **self._fn_kwargs)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/losses.py\", line 1665, in categorical_crossentropy\n        y_true, y_pred, from_logits=from_logits, axis=axis)\n    File \"/usr/local/lib/python3.7/dist-packages/keras/backend.py\", line 4994, in categorical_crossentropy\n        target.shape.assert_is_compatible_with(output.shape)\n\n    ValueError: Shapes (32, 5) and (32, 10) are incompatible\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.History at 0x7f65713f29d0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#predict first 4 images in the test set\n",
+        "model_cnn.predict(X_test_cnn[:4])"
+      ],
+      "metadata": {
+        "id": "MTqyrMLPCczq",
+        "outputId": "5698f0da-4085-4286-8469-dbe5d6cd5a57",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2.9889408e-10, 5.6359164e-07, 9.9989998e-01, 9.9419754e-05,\n",
+              "        1.9173318e-09],\n",
+              "       [4.3142179e-09, 7.2698538e-07, 8.3041133e-04, 9.9916768e-01,\n",
+              "        1.1885918e-06],\n",
+              "       [1.7702808e-09, 9.9619699e-01, 2.1180016e-09, 3.8030399e-03,\n",
+              "        2.6701525e-09],\n",
+              "       [3.3295746e-09, 8.9302730e-06, 9.9997973e-01, 4.5450493e-06,\n",
+              "        6.7882625e-06]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9.9989998e-01 - this give the probability for prediction for class 2"
+      ],
+      "metadata": {
+        "id": "_IQhOA1DDCXT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#actual results for first 4 images in test set\n",
+        "y_test_cnn[:4]"
+      ],
+      "metadata": {
+        "id": "zX8fQJI3Ckiz",
+        "outputId": "25db88d5-850b-4366-980e-4de58dbf7afd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 1., 0., 0.],\n",
+              "       [0., 0., 0., 1., 0.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [0., 0., 1., 0., 0.]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Same  is matching with the test data output"
+      ],
+      "metadata": {
+        "id": "BFrCBOEkDR_l"
+      }
     }
   ]
 }
