--- a/Assignment/AIMLCEP_Q3.ipynb
+++ b/Assignment/AIMLCEP_Q3.ipynb
@@ -3287,13 +3287,15 @@
         "#add model layers\n",
         "model_cnn.add(layers.Conv2D(64, kernel_size=3, activation='relu', input_shape=(28,28,1)))\n",
         "model_cnn.add(layers.Conv2D(32, kernel_size=3, activation='relu'))\n",
+        "model_cnn.add(layers.Conv2D(16, kernel_size=3, activation='relu'))\n",
+        "model_cnn.add(layers.MaxPooling2D(pool_size=2))\n",
         "model_cnn.add(layers.Flatten())\n",
         "model_cnn.add(layers.Dense(5, activation='softmax'))"
       ],
       "metadata": {
         "id": "zx7YIQbR-i6y"
       },
-      "execution_count": 20,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -3305,7 +3307,7 @@
       "metadata": {
         "id": "78I-syPI-wYf"
       },
-      "execution_count": 22,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -3319,31 +3321,31 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5ziME6Do_VJ7",
-        "outputId": "c62f0b5a-d79f-4694-9c19-c17d47caace2"
+        "outputId": "43efb5fb-107b-4964-cf5e-2f1d56d60394"
       },
-      "execution_count": 23,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/3\n",
-            "600/600 [==============================] - 50s 83ms/step - loss: 0.1191 - accuracy: 0.9602 - val_loss: 0.0447 - val_accuracy: 0.9871\n",
+            "600/600 [==============================] - 67s 110ms/step - loss: 0.1399 - accuracy: 0.9539 - val_loss: 0.0475 - val_accuracy: 0.9831\n",
             "Epoch 2/3\n",
-            "600/600 [==============================] - 50s 83ms/step - loss: 0.0392 - accuracy: 0.9877 - val_loss: 0.0386 - val_accuracy: 0.9873\n",
+            "600/600 [==============================] - 65s 109ms/step - loss: 0.0444 - accuracy: 0.9854 - val_loss: 0.0501 - val_accuracy: 0.9825\n",
             "Epoch 3/3\n",
-            "600/600 [==============================] - 50s 83ms/step - loss: 0.0264 - accuracy: 0.9920 - val_loss: 0.0422 - val_accuracy: 0.9873\n"
+            "600/600 [==============================] - 66s 111ms/step - loss: 0.0340 - accuracy: 0.9890 - val_loss: 0.0395 - val_accuracy: 0.9867\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f65713f29d0>"
+              "<keras.callbacks.History at 0x7f657158ce90>"
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 30
         }
       ]
     },
@@ -3354,30 +3356,30 @@
         "model_cnn.predict(X_test_cnn[:4])"
       ],
       "metadata": {
-        "id": "MTqyrMLPCczq",
-        "outputId": "5698f0da-4085-4286-8469-dbe5d6cd5a57",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MTqyrMLPCczq",
+        "outputId": "31b848ab-01d6-4505-cc20-7144f5be764e"
       },
-      "execution_count": 27,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[2.9889408e-10, 5.6359164e-07, 9.9989998e-01, 9.9419754e-05,\n",
-              "        1.9173318e-09],\n",
-              "       [4.3142179e-09, 7.2698538e-07, 8.3041133e-04, 9.9916768e-01,\n",
-              "        1.1885918e-06],\n",
-              "       [1.7702808e-09, 9.9619699e-01, 2.1180016e-09, 3.8030399e-03,\n",
-              "        2.6701525e-09],\n",
-              "       [3.3295746e-09, 8.9302730e-06, 9.9997973e-01, 4.5450493e-06,\n",
-              "        6.7882625e-06]], dtype=float32)"
+              "array([[3.3567794e-14, 2.7517275e-10, 9.9999833e-01, 1.6232780e-06,\n",
+              "        7.3540246e-10],\n",
+              "       [5.3882048e-11, 8.2843854e-08, 1.3513027e-03, 9.9864715e-01,\n",
+              "        1.4633035e-06],\n",
+              "       [4.9413165e-13, 9.9966562e-01, 1.5494132e-09, 3.3438345e-04,\n",
+              "        1.6915396e-09],\n",
+              "       [4.9705486e-14, 5.2123111e-10, 9.9999881e-01, 5.8223688e-09,\n",
+              "        1.2013597e-06]], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 31
         }
       ]
     },
@@ -3397,13 +3399,13 @@
         "y_test_cnn[:4]"
       ],
       "metadata": {
-        "id": "zX8fQJI3Ckiz",
-        "outputId": "25db88d5-850b-4366-980e-4de58dbf7afd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zX8fQJI3Ckiz",
+        "outputId": "38da261f-6148-4caf-ae6d-c06ddb2c8d8c"
       },
-      "execution_count": 26,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3416,7 +3418,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 32
         }
       ]
     },
