--- a/Assignment/AIMLCEP_Q1.ipynb
+++ b/Assignment/AIMLCEP_Q1.ipynb
@@ -789,14 +789,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "q9X7RNSU_g4e",
-        "outputId": "7f05fdc6-70bf-44dc-d071-3df340b246f8"
+        "outputId": "9bea2851-8e4b-47d6-fe85-384ab32edc03"
       },
       "source": [
         "#Let us now compute beta_train \n",
         "n_train = len(weight_height_data.index) #number of data points in the data set\n",
         "print('number of data points in the data set:',n_train)"
       ],
-      "execution_count": 12,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,7 +815,7 @@
           "height": 423
         },
         "id": "_Ak31dRU-J-h",
-        "outputId": "0d73df30-8443-4671-ce64-f9ac13d680e0"
+        "outputId": "3573f2b5-5998-4086-a187-df2f7a7a1912"
       },
       "source": [
         "#extract the predictor variable columns \n",
@@ -824,14 +824,14 @@
         "\n",
         "X_data"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-7f1d2545-0e10-4c16-b736-eb90fc617b2c\">\n",
+              "  <div id=\"df-98c8f25e-e8b2-4c31-b092-faebd3a1bce3\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -939,7 +939,7 @@
               "</table>\n",
               "<p>124 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7f1d2545-0e10-4c16-b736-eb90fc617b2c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-98c8f25e-e8b2-4c31-b092-faebd3a1bce3')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -990,12 +990,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7f1d2545-0e10-4c16-b736-eb90fc617b2c button.colab-df-convert');\n",
+              "          document.querySelector('#df-98c8f25e-e8b2-4c31-b092-faebd3a1bce3 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7f1d2545-0e10-4c16-b736-eb90fc617b2c');\n",
+              "          const element = document.querySelector('#df-98c8f25e-e8b2-4c31-b092-faebd3a1bce3');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -1034,7 +1034,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 166
+          "execution_count": 25
         }
       ]
     },
@@ -1045,7 +1045,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JbV7qlZV-noC",
-        "outputId": "d5279164-259a-4f43-b33c-b782dc407050"
+        "outputId": "491c392b-8346-46a7-fe2b-4f68335cf916"
       },
       "source": [
         "#convert predictor variable columns into a numpy array\n",
@@ -1053,7 +1053,7 @@
         "X_array = weight_height_data[weight_height_data.columns[cols]].to_numpy()\n",
         "X_array"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1186,7 +1186,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 167
+          "execution_count": 26
         }
       ]
     },
@@ -1197,7 +1197,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8ph3kDe0_qtT",
-        "outputId": "f03b1992-cd7f-481e-cd4f-671008bc3926"
+        "outputId": "3b1ba226-334a-4414-b178-1a063477c54b"
       },
       "source": [
         "import numpy as np\n",
@@ -1206,7 +1206,7 @@
         "\n",
         "X_train"
       ],
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1339,7 +1339,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 168
+          "execution_count": 27
         }
       ]
     },
@@ -1350,149 +1350,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YCuKqQqBFklC",
-        "outputId": "0d67b622-ca0d-4031-f298-35719e04893c"
+        "outputId": "828e6499-51ba-4c86-a769-e120805b78d3"
       },
       "source": [
-        "#convert predictor variable columns into a numpy array\n",
+        "#convert response variable columns into a numpy array\n",
         "\n",
         "response_cols = [4]\n",
         "y_train = weight_height_data[weight_height_data.columns[response_cols]].to_numpy()\n",
-        "y_train\n"
+        "y_train.shape\n"
       ],
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 242. ],\n",
-              "       [ 290. ],\n",
-              "       [ 340. ],\n",
-              "       [ 363. ],\n",
-              "       [ 430. ],\n",
-              "       [ 500. ],\n",
-              "       [ 390. ],\n",
-              "       [ 500. ],\n",
-              "       [ 475. ],\n",
-              "       [ 500. ],\n",
-              "       [ 500. ],\n",
-              "       [ 600. ],\n",
-              "       [ 600. ],\n",
-              "       [ 700. ],\n",
-              "       [ 700. ],\n",
-              "       [ 610. ],\n",
-              "       [ 650. ],\n",
-              "       [ 685. ],\n",
-              "       [ 620. ],\n",
-              "       [ 680. ],\n",
-              "       [ 700. ],\n",
-              "       [ 725. ],\n",
-              "       [ 720. ],\n",
-              "       [ 850. ],\n",
-              "       [1000. ],\n",
-              "       [ 920. ],\n",
-              "       [ 955. ],\n",
-              "       [ 925. ],\n",
-              "       [ 975. ],\n",
-              "       [ 270. ],\n",
-              "       [ 270. ],\n",
-              "       [ 306. ],\n",
-              "       [ 800. ],\n",
-              "       [1000. ],\n",
-              "       [  40. ],\n",
-              "       [  69. ],\n",
-              "       [  87. ],\n",
-              "       [ 120. ],\n",
-              "       [ 110. ],\n",
-              "       [ 120. ],\n",
-              "       [ 150. ],\n",
-              "       [ 160. ],\n",
-              "       [ 140. ],\n",
-              "       [ 160. ],\n",
-              "       [ 161. ],\n",
-              "       [ 200. ],\n",
-              "       [ 180. ],\n",
-              "       [ 272. ],\n",
-              "       [ 390. ],\n",
-              "       [  55. ],\n",
-              "       [  60. ],\n",
-              "       [ 120. ],\n",
-              "       [ 150. ],\n",
-              "       [ 140. ],\n",
-              "       [ 145. ],\n",
-              "       [ 200. ],\n",
-              "       [ 273. ],\n",
-              "       [ 300. ],\n",
-              "       [   6.7],\n",
-              "       [   7.5],\n",
-              "       [   7. ],\n",
-              "       [   9.7],\n",
-              "       [   9.8],\n",
-              "       [   9.8],\n",
-              "       [  12.2],\n",
-              "       [  13.4],\n",
-              "       [  12.2],\n",
-              "       [  19.7],\n",
-              "       [  19.9],\n",
-              "       [ 200. ],\n",
-              "       [ 300. ],\n",
-              "       [ 300. ],\n",
-              "       [ 300. ],\n",
-              "       [ 430. ],\n",
-              "       [ 345. ],\n",
-              "       [ 510. ],\n",
-              "       [ 500. ],\n",
-              "       [ 567. ],\n",
-              "       [ 770. ],\n",
-              "       [ 950. ],\n",
-              "       [1250. ],\n",
-              "       [1550. ],\n",
-              "       [1650. ],\n",
-              "       [   5.9],\n",
-              "       [  32. ],\n",
-              "       [  51.5],\n",
-              "       [  70. ],\n",
-              "       [ 100. ],\n",
-              "       [  80. ],\n",
-              "       [  85. ],\n",
-              "       [  85. ],\n",
-              "       [ 110. ],\n",
-              "       [ 115. ],\n",
-              "       [ 120. ],\n",
-              "       [ 130. ],\n",
-              "       [ 135. ],\n",
-              "       [ 110. ],\n",
-              "       [ 130. ],\n",
-              "       [ 150. ],\n",
-              "       [ 225. ],\n",
-              "       [ 145. ],\n",
-              "       [ 188. ],\n",
-              "       [ 180. ],\n",
-              "       [ 197. ],\n",
-              "       [ 218. ],\n",
-              "       [ 300. ],\n",
-              "       [ 260. ],\n",
-              "       [ 265. ],\n",
-              "       [ 250. ],\n",
-              "       [ 514. ],\n",
-              "       [ 556. ],\n",
-              "       [ 840. ],\n",
-              "       [ 685. ],\n",
-              "       [ 700. ],\n",
-              "       [ 700. ],\n",
-              "       [ 690. ],\n",
-              "       [ 900. ],\n",
-              "       [ 650. ],\n",
-              "       [ 820. ],\n",
-              "       [ 820. ],\n",
-              "       [1100. ],\n",
-              "       [1000. ],\n",
-              "       [1100. ],\n",
-              "       [1000. ]])"
+              "(124, 1)"
             ]
           },
           "metadata": {},
-          "execution_count": 169
+          "execution_count": 28
         }
       ]
     },
@@ -1503,7 +1380,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yOOBCb5bFtKr",
-        "outputId": "e591d486-37f1-46fb-9765-b26ab4ef0167"
+        "outputId": "b9774100-547a-4519-a1e6-d621548d92ab"
       },
       "source": [
         "#Now we are ready for finding beta\n",
@@ -1517,16 +1394,16 @@
         "\n",
         "beta_train = np.matmul(np.linalg.inv(XTX),Xy)\n",
         "\n",
-        "print('beta',beta_train)"
+        "print('beta train',beta_train)"
       ],
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "XTX shape: (5, 5)\n",
-            "beta [[   2.4173551 ]\n",
+            "beta train [[   2.4173551 ]\n",
             " [  27.8581628 ]\n",
             " [   2.67475542]\n",
             " [  13.06363395]\n",
@@ -1541,7 +1418,7 @@
         "id": "FoBI7g6Gc5H_"
       },
       "source": [
-        "$\\Large{\\text{Residual Plot}}$\n",
+        "Lets plot the Residual Plot\n",
         "\n",
         "Sometimes it would be useful to plot the error (or) $\\textbf{residual}$ $e^i$ versus the fitted values $\\hat{y}^i=\\beta_0 + \\sum_{j=1}^{d} \\beta_j x^i_j$.  "
       ]
@@ -1554,15 +1431,15 @@
           "height": 296
         },
         "id": "ymSVWrHgql4y",
-        "outputId": "1bf8f4a8-17ec-4708-d7b7-e7f85ed21a97"
+        "outputId": "1335b6e0-f816-4ae1-802a-e165bf75f49b"
       },
       "source": [
         "e_i_residuals_list = [] \n",
-        "for i in range(n): \n",
+        "for i in range(n_train): \n",
         "  x_i = X_train[i,:] #access i-th row of X\n",
         "  y_i = y_train[i] #access i-th row of y\n",
         "\n",
-        "  y_pred_i = np.dot(x_i,beta) #compute the prediction obtained using the regression coefficients \n",
+        "  y_pred_i = np.dot(x_i,beta_train) #compute the prediction obtained using the regression coefficients \n",
         "  e_i = y_i - y_pred_i #compute the difference between the actual observation y_i and prediction y_pred_i\n",
         "\n",
         "  e_i_residuals_list.append(e_i) #append the value of e_i to the list \n",
@@ -1575,7 +1452,7 @@
         "plt.grid()\n",
         "plt.show()"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1589,15 +1466,6 @@
             "needs_background": "light"
           }
         }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QE8zP-1bsOjO"
-      },
-      "source": [
-        "Note that the residual plot helps to check the variance in the errors $e^i$. "
       ]
     },
     {
